# template-hydra-project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_linters.sh
.github/workflows/: python-app.yml
config/: config_main.yaml
config/hydra/: base.yaml
config/hydra/job_logging/: base.yaml
config/user_settings/: user_settings.yaml
project_name/scripts/: main.py
project_name/utils/: common.py
